compiler/e2e/test/snapshot/semantic_element/wf_check/marker_not_satisfied/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: unsatisfied predicate
   ╭─ compiler/e2e/test/snapshot/semantic_element/wf_check/marker_not_satisfied/main.pnx:18:28
   │
15 │         marker Marker[T]
   │                --------- the required predicate was declared here
   ·
18 │ public type InstMyStruct = WithRequirement[MyStruct]
   │                            ^^^^^^^^^^^^^^^^^^^^^^^^^ the predicate `marker main::Marker[main::MyStruct]` is not satisfied

error: Compilation aborted due to 1 error(s)



stdout:
